--- a/FinalVersion/app/src/main/res/layout/fragment_slideshow.xml
+++ b/FinalVersion/app/src/main/res/layout/fragment_slideshow.xml
@@ -10,11 +10,12 @@
         android:id="@+id/text_slideshow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8sp"
+        android:layout_marginTop="8sp"
+        android:layout_marginEnd="8sp"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:text="Leaderboard Coming Soon :)))"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
