--- a/FinalVersion/app/src/main/res/navigation/mobile_navigation.xml
+++ b/FinalVersion/app/src/main/res/navigation/mobile_navigation.xml
@@ -105,4 +105,9 @@
         android:name="com.example.finalversion.ui.statistics.StatisticsFragment"
         android:label="@string/menu_statistics"
         tools:layout="@layout/fragment_statistics" />
+    <fragment
+        android:id="@+id/nav_profile"
+        android:name="com.example.finalversion.ui.profile.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
