--- a/FinalVersion/app/src/main/res/layout/fragment_slideshow.xml
+++ b/FinalVersion/app/src/main/res/layout/fragment_slideshow.xml
@@ -6,18 +6,184 @@
     android:layout_height="match_parent"
     tools:context=".ui.slideshow.SlideshowFragment">
 
-    <TextView
-        android:id="@+id/text_slideshow"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8sp"
-        android:layout_marginTop="8sp"
-        android:layout_marginEnd="8sp"
-        android:textAlignment="center"
-        android:textSize="17sp"
-        android:text="Leaderboard Coming Soon :)))"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <!-- Leaderboard Selection -->
+        <LinearLayout
+            android:id="@+id/leaderboard_select"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/fragment_horizontal_margin"
+            android:paddingRight="@dimen/fragment_horizontal_margin"
+            android:paddingBottom="1sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:id="@+id/text_and_button_leaderboard"
+                android:layout_width="match_parent"
+                android:layout_height="45sp"
+                android:orientation="horizontal"
+                android:paddingTop="8sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/instructionTextLeaderboard"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Select Leaderboard to Display:"
+                    android:textAlignment="textStart"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    android:paddingEnd="10sp"
+                    android:paddingTop="8sp"/>
+
+                <Button
+                    android:id="@+id/selectLeaderboard"
+                    android:layout_width="120sp"
+                    android:layout_height="45sp"
+                    android:layout_gravity="end"
+                    android:backgroundTint="?android:attr/textColorPrimary"
+                    android:text="Select"
+                    android:textColor="?android:attr/textColorPrimaryInverse"
+                    android:textSize="17sp" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/selectedHabitsPreviewLeaderboard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:textColor="#757575"
+                android:textSize="17sp" />
+
+        </LinearLayout>
+
+        <!-- Leaderboard -->
+        <LinearLayout
+            android:id="@+id/addLeaderboardComponents"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+            <Button
+                android:id="@+id/loadPreviousLeaderboard"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/backArrow"
+                android:textColor="@color/Azure"
+                android:background="@android:color/transparent"
+                android:textStyle="bold"
+                android:textSize="17sp"/>
+
+            <TextView
+                android:id="@+id/currentlyDisplayingLeaderboard"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:text="1-10"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:textColor="?android:attr/textColorPrimary"/>
+
+            <Button
+                android:id="@+id/leadNextLeaderboard"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/forwardArrow"
+                android:textColor="@color/Azure"
+                android:background="@android:color/transparent"
+                android:textStyle="bold"
+                android:textSize="17sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Rank"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textAlignment="center"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="User"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textAlignment="center"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Score"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textAlignment="center"
+                android:textSize="20sp"/>
+
+        </LinearLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/leaderboardRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <!--Reset-->
+        <!--
+        <LinearLayout
+            android:orientation="horizontal"
+            android:paddingLeft="10sp"
+            android:paddingTop="5sp"
+            android:paddingRight="10sp"
+            android:paddingBottom="5sp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/leaderboard_reset_weekly"
+                android:layout_width="0sp"
+                android:layout_height="50sp"
+                android:layout_marginEnd="10sp"
+                android:text="Reset Weekly"
+                android:backgroundTint="?android:attr/textColorPrimary"
+                android:textColor="?android:attr/textColorPrimaryInverse"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/leaderboard_reset_monthly"
+                android:layout_width="0sp"
+                android:layout_height="50sp"
+                android:text="Reset Monthly"
+                android:backgroundTint="?android:attr/textColorPrimary"
+                android:textColor="?android:attr/textColorPrimaryInverse"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+        -->
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
