--- a/FinalVersion/app/src/main/res/layout/fragment_habit_subtask_settings.xml
+++ b/FinalVersion/app/src/main/res/layout/fragment_habit_subtask_settings.xml
@@ -11,6 +11,12 @@
     android:paddingRight="@dimen/fragment_horizontal_margin"
     android:paddingBottom="@dimen/fragment_vertical_margin">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
     <!-- Task Name -->
     <LinearLayout
         android:id="@+id/habit_subtask_name"
@@ -124,6 +130,7 @@
             android:layout_gravity="left"
             android:textColor="#757575"
             android:textSize="17sp" />
+    </LinearLayout>
     </LinearLayout>
 
 
