--- a/FinalVersion/app/src/main/res/layout/fragment_subtask_settings.xml
+++ b/FinalVersion/app/src/main/res/layout/fragment_subtask_settings.xml
@@ -11,6 +11,12 @@
     android:paddingRight="@dimen/fragment_horizontal_margin"
     android:paddingBottom="@dimen/fragment_vertical_margin">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
     <!-- Task Name -->
     <LinearLayout
         android:id="@+id/subtask_name"
@@ -74,6 +80,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="TouchTargetSizeCheck" />
+    </LinearLayout>
+
     </LinearLayout>
 
     <Button
